--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "buefy": "^0.8.5",
+    "chart.js": "^2.8.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
